Revert "Merge pull request #693 from spotify/partial-active-instance-reads"
This reverts commit b753b9f743d7c15b17d927d54eb8355bb60e81a4, reversing
changes made to 666788ec2ce93e695c53612d2b69b9f7261e6533.